More memory for running tests on Jenkins